make sidebar readable

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -2,3 +2,11 @@
     min-width: 800px !important;
     max-width: 1200px !important;
 }
+
+.wy-menu-vertical li.toctree-l3 {
+    font-size: 1em !important;
+}
+
+.rst-content code, .rst-content tt, code {
+    font-size: 100% !important;
+}
